--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="card-group" data-aos="fade-up" data-aos-duration="700">
                         <div class="card">
                             <div class="card-body"><i class="icon ion-ios-pie-outline" style="font-size: 102px;color: rgb(238,84,18);"></i>
-                                <h4 class="card-title"><strong><span style="color: hsla(var(--ws-surface-heading-4-color), var(--ws-surface-heading-4-color-opacity));">Custom Web&nbsp; &nbsp; &nbsp;Design</span></strong></h4>
+                                <h4 class="card-title"><strong><span style="color: hsla(var(--ws-surface-heading-4-color), var(--ws-surface-heading-4-color-opacity));">Custom Web Design</span></strong></h4>
                                 <p class="card-text" style="color: rgba(58,63,68,0.9);font-family: Actor, sans-serif;"><br><span style="color: hsla(var(--ws-surface-paragraph-color), var(--ws-surface-paragraph-color-opacity)); background-color: hsla(var(--ws-surface-background-color), 1);">Tailored website designs that reflect your brand identity and provide an engaging user experience</span><br><br></p>
                             </div>
                         </div>
